// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotSheet Export Test Custom Tree Export Test should export correct data in grid mode for custom row cell 1`] = `
"		类型	家具	家具
层级1	自定义节点 a-1-1	指标1	桌子	椅子
自定义节点 a-1	自定义节点 a-1-1	指标1	13	11
自定义节点 a-1	自定义节点 a-1-1	指标2	2	8
自定义节点 a-1	自定义节点 a-1-2		-	-
自定义节点 a-2			-	-"
`;

exports[`PivotSheet Export Test Custom Tree Export Test should export correct data in tree mode for custom row cell 1`] = `
"		类型	家具	家具
		层级1/层级2/数值	桌子	椅子
自定义节点 a-1			-	-
自定义节点 a-1	自定义节点 a-1-1		-	-
自定义节点 a-1	自定义节点 a-1-1	指标1	13	11
自定义节点 a-1	自定义节点 a-1-1	指标2	2	8
自定义节点 a-1	自定义节点 a-1-2		-	-
自定义节点 a-2			-	-"
`;

exports[`PivotSheet Export Test Custom Tree Export Test should export correct data in tree mode for custom row cell and custom corner text 1`] = `
"		类型	家具	家具
		自定义	桌子	椅子
自定义节点 a-1			-	-
自定义节点 a-1	自定义节点 a-1-1		-	-
自定义节点 a-1	自定义节点 a-1-1	指标1	13	11
自定义节点 a-1	自定义节点 a-1-1	指标2	2	8
自定义节点 a-1	自定义节点 a-1-2		-	-
自定义节点 a-2			-	-"
`;

exports[`PivotSheet Export Test should called with cell view meta when export formatted data 1`] = `
"	type	家具	家具	办公用品	办公用品
	sub_type	桌子	沙发	笔	纸张
province	city	number	number	number	number
浙江省	杭州市	-	-	-	-
浙江省	绍兴市	-	-	-	-
浙江省	宁波市	-	-	-	-
浙江省	舟山市	-	-	-	-
四川省	成都市	-	-	-	-
四川省	绵阳市	-	-	-	-
四川省	南充市	-	-	-	-
四川省	乐山市	-	-	-	-"
`;

exports[`PivotSheet Export Test should export correct HTML data 1`] = `"<meta charset=\\"utf-8\\"><table><tbody><tr><td></td><td>类别</td><td>家具</td><td>家具</td><td>办公用品</td><td>办公用品</td></tr><tr><td></td><td>子类别</td><td>桌子</td><td>沙发</td><td>笔</td><td>纸张</td></tr><tr><td>省份</td><td>城市</td><td>数量</td><td>数量</td><td>数量</td><td>数量</td></tr><tr><td>浙江省</td><td>杭州市</td><td>7789</td><td>5343</td><td>945</td><td>1343</td></tr><tr><td>浙江省</td><td>绍兴市</td><td>2367</td><td>632</td><td>1304</td><td>1354</td></tr><tr><td>浙江省</td><td>宁波市</td><td>3877</td><td>7234</td><td>1145</td><td>1523</td></tr><tr><td>浙江省</td><td>舟山市</td><td>4342</td><td>834</td><td>1432</td><td>1634</td></tr><tr><td>四川省</td><td>成都市</td><td>1723</td><td>2451</td><td>2335</td><td>4004</td></tr><tr><td>四川省</td><td>绵阳市</td><td>1822</td><td>2244</td><td>245</td><td>3077</td></tr><tr><td>四川省</td><td>南充市</td><td>1943</td><td>2333</td><td>2457</td><td>3551</td></tr><tr><td>四川省</td><td>乐山市</td><td>2330</td><td>2445</td><td>2458</td><td>352</td></tr></tbody></table>"`;

exports[`PivotSheet Export Test should export correct all type data 1`] = `
Array [
  Object {
    "content": "	类别	家具	家具	办公用品	办公用品
	子类别	桌子	沙发	笔	纸张
省份	城市	数量	数量	数量	数量
浙江省	杭州市	7789	5343	945	1343
浙江省	绍兴市	2367	632	1304	1354
浙江省	宁波市	3877	7234	1145	1523
浙江省	舟山市	4342	834	1432	1634
四川省	成都市	1723	2451	2335	4004
四川省	绵阳市	1822	2244	245	3077
四川省	南充市	1943	2333	2457	3551
四川省	乐山市	2330	2445	2458	352",
    "type": "text/plain",
  },
  Object {
    "content": "<meta charset=\\"utf-8\\"><table><tbody><tr><td></td><td>类别</td><td>家具</td><td>家具</td><td>办公用品</td><td>办公用品</td></tr><tr><td></td><td>子类别</td><td>桌子</td><td>沙发</td><td>笔</td><td>纸张</td></tr><tr><td>省份</td><td>城市</td><td>数量</td><td>数量</td><td>数量</td><td>数量</td></tr><tr><td>浙江省</td><td>杭州市</td><td>7789</td><td>5343</td><td>945</td><td>1343</td></tr><tr><td>浙江省</td><td>绍兴市</td><td>2367</td><td>632</td><td>1304</td><td>1354</td></tr><tr><td>浙江省</td><td>宁波市</td><td>3877</td><td>7234</td><td>1145</td><td>1523</td></tr><tr><td>浙江省</td><td>舟山市</td><td>4342</td><td>834</td><td>1432</td><td>1634</td></tr><tr><td>四川省</td><td>成都市</td><td>1723</td><td>2451</td><td>2335</td><td>4004</td></tr><tr><td>四川省</td><td>绵阳市</td><td>1822</td><td>2244</td><td>245</td><td>3077</td></tr><tr><td>四川省</td><td>南充市</td><td>1943</td><td>2333</td><td>2457</td><td>3551</td></tr><tr><td>四川省</td><td>乐山市</td><td>2330</td><td>2445</td><td>2458</td><td>352</td></tr></tbody></table>",
    "type": "text/html",
  },
]
`;

exports[`PivotSheet Export Test should export correct data by {formatHeader: true} 1`] = `
"	类型	家具-type	家具-type	办公用品-type	办公用品-type
	子类型	桌子-sub_type	沙发-sub_type	笔-sub_type	纸张-sub_type
省份	城市	数值	数值	数值	数值
浙江省-province	杭州市-city	7789	5343	945	1343
浙江省-province	绍兴市-city	2367	632	1304	1354
浙江省-province	宁波市-city	3877	7234	1145	1523
浙江省-province	舟山市-city	4342	834	1432	1634
四川省-province	成都市-city	1723	2451	2335	4004
四川省-province	绵阳市-city	1822	2244	245	3077
四川省-province	南充市-city	1943	2333	2457	3551
四川省-province	乐山市-city	2330	2445	2458	352"
`;

exports[`PivotSheet Export Test should export correct data in grid mode 1`] = `
"	类别	家具	家具	办公用品	办公用品
	子类别	桌子	沙发	笔	纸张
省份	城市	数量	数量	数量	数量
浙江省	杭州市	7789	5343	945	1343
浙江省	绍兴市	2367	632	1304	1354
浙江省	宁波市	3877	7234	1145	1523
浙江省	舟山市	4342	834	1432	1634
四川省	成都市	1723	2451	2335	4004
四川省	绵阳市	1822	2244	245	3077
四川省	南充市	1943	2333	2457	3551
四川省	乐山市	2330	2445	2458	352"
`;

exports[`PivotSheet Export Test should export correct data in grid mode with grouped totals in col 1`] = `
"	类别	家具	家具	家具	办公用品	办公用品	办公用品	总计
	子类别	桌子	沙发	小计	笔	纸张	小计	
省份	城市	数量	数量		数量	数量		
浙江省	杭州市	7789	5343	13132	945	1343	2288	15420
浙江省	绍兴市	2367	632	2999	1304	1354	2658	5657
浙江省	宁波市	3877	7234	11111	1145	1523	2668	13779
浙江省	舟山市	4342	834	5176	1432	1634	3066	8242
浙江省	小计	18375	14043	32418	4826	5854	10680	43098
四川省	成都市	1723	2451	4174	2335	4004	6339	10513
四川省	绵阳市	1822	2244	4066	245	3077	3322	7388
四川省	南充市	1943	2333	4276	2457	3551	6008	10284
四川省	乐山市	2330	2445	4775	2458	352	2810	7585
四川省	小计	7818	9473	17291	7495	10984	18479	35770
总计		26193	23516	49709	12321	16838	29159	78868"
`;

exports[`PivotSheet Export Test should export correct data in grid mode with grouped totals in row 1`] = `
"	类别		家具	家具	家具	办公用品	办公用品	办公用品	总计	总计	总计	总计
	子类别		桌子	沙发	小计	笔	纸张	小计	桌子	沙发	笔	纸张
浙江省	杭州市	数量	7789	5343	13132	945	1343	2288	-	-	-	-
浙江省	绍兴市	数量	2367	632	2999	1304	1354	2658	-	-	-	-
浙江省	宁波市	数量	3877	7234	11111	1145	1523	2668	-	-	-	-
浙江省	舟山市	数量	4342	834	5176	1432	1634	3066	-	-	-	-
浙江省	小计		18375	14043	32418	4826	5854	10680	-	-	-	-
四川省	成都市	数量	1723	2451	4174	2335	4004	6339	-	-	-	-
四川省	绵阳市	数量	1822	2244	4066	245	3077	3322	-	-	-	-
四川省	南充市	数量	1943	2333	4276	2457	3551	6008	-	-	-	-
四川省	乐山市	数量	2330	2445	4775	2458	352	2810	-	-	-	-
四川省	小计		7818	9473	17291	7495	10984	18479	-	-	-	-
总计			26193	23516	49709	12321	16838	29159	-	-	-	-"
`;

exports[`PivotSheet Export Test should export correct data in grid mode with totals in col 1`] = `
"	类别	家具	家具	家具	办公用品	办公用品	办公用品	总计
	子类别	桌子	沙发	小计	笔	纸张	小计	
省份	城市	数量	数量		数量	数量		
浙江省	杭州市	7789	5343	13132	945	1343	2288	15420
浙江省	绍兴市	2367	632	2999	1304	1354	2658	5657
浙江省	宁波市	3877	7234	11111	1145	1523	2668	13779
浙江省	舟山市	4342	834	5176	1432	1634	3066	8242
浙江省	小计	18375	14043	32418	4826	5854	10680	43098
四川省	成都市	1723	2451	4174	2335	4004	6339	10513
四川省	绵阳市	1822	2244	4066	245	3077	3322	7388
四川省	南充市	1943	2333	4276	2457	3551	6008	10284
四川省	乐山市	2330	2445	4775	2458	352	2810	7585
四川省	小计	7818	9473	17291	7495	10984	18479	35770
总计		26193	23516	49709	12321	16838	29159	78868"
`;

exports[`PivotSheet Export Test should export correct data in grid mode with totals in row 1`] = `
"	类别		家具	家具	家具	办公用品	办公用品	办公用品	总计
	子类别		桌子	沙发	小计	笔	纸张	小计	
浙江省	杭州市	数量	7789	5343	13132	945	1343	2288	15420
浙江省	绍兴市	数量	2367	632	2999	1304	1354	2658	5657
浙江省	宁波市	数量	3877	7234	11111	1145	1523	2668	13779
浙江省	舟山市	数量	4342	834	5176	1432	1634	3066	8242
浙江省	小计		18375	14043	32418	4826	5854	10680	43098
四川省	成都市	数量	1723	2451	4174	2335	4004	6339	10513
四川省	绵阳市	数量	1822	2244	4066	245	3077	3322	7388
四川省	南充市	数量	1943	2333	4276	2457	3551	6008	10284
四川省	乐山市	数量	2330	2445	4775	2458	352	2810	7585
四川省	小计		7818	9473	17291	7495	10984	18479	35770
总计			26193	23516	49709	12321	16838	29159	78868"
`;

exports[`PivotSheet Export Test should export correct data in grid mode with valueInCols is false 1`] = `
"	type		家具	家具	办公用品	办公用品
	sub_type		桌子	沙发	笔	纸张
浙江省	杭州市	数量	7789	5343	945	1343
浙江省	绍兴市	数量	2367	632	1304	1354
浙江省	宁波市	数量	3877	7234	1145	1523
浙江省	舟山市	数量	4342	834	1432	1634
四川省	成都市	数量	1723	2451	2335	4004
四川省	绵阳市	数量	1822	2244	245	3077
四川省	南充市	数量	1943	2333	2457	3551
四川省	乐山市	数量	2330	2445	2458	352"
`;

exports[`PivotSheet Export Test should export correct data in tree mode 1`] = `
"	类别	家具	家具	办公用品	办公用品
	子类别	桌子	沙发	笔	纸张
省份	城市	数量	数量	数量	数量
浙江省		-	-	-	-
浙江省	杭州市	7789	5343	945	1343
浙江省	绍兴市	2367	632	1304	1354
浙江省	宁波市	3877	7234	1145	1523
浙江省	舟山市	4342	834	1432	1634
四川省		-	-	-	-
四川省	成都市	1723	2451	2335	4004
四川省	绵阳市	1822	2244	245	3077
四川省	南充市	1943	2333	2457	3551
四川省	乐山市	2330	2445	2458	352"
`;

exports[`PivotSheet Export Test should export correct data in tree mode and collapseAll is false 1`] = `
"	类别	家具	家具	办公用品	办公用品
	子类别	桌子	沙发	笔	纸张
省份	城市	数量	数量	数量	数量
浙江省		-	-	-	-
浙江省	杭州市	7789	5343	945	1343
浙江省	绍兴市	2367	632	1304	1354
浙江省	宁波市	3877	7234	1145	1523
浙江省	舟山市	4342	834	1432	1634
四川省		-	-	-	-
四川省	成都市	1723	2451	2335	4004
四川省	绵阳市	1822	2244	245	3077
四川省	南充市	1943	2333	2457	3551
四川省	乐山市	2330	2445	2458	352"
`;

exports[`PivotSheet Export Test should export correct data in tree mode and row collapseAll is true 1`] = `
"类别	家具	家具	办公用品	办公用品
子类别	桌子	沙发	笔	纸张
省份	数量	数量	数量	数量
浙江省	-	-	-	-
四川省	-	-	-	-"
`;

exports[`PivotSheet Export Test should export correct value field name by {formatHeader: false, formatData: true} 1`] = `
"	type	家具	家具	办公用品	办公用品
	sub_type	桌子	沙发	笔	纸张
province	city	number	number	number	number
浙江省	杭州市	7789万	5343万	945万	1343万
浙江省	绍兴市	2367万	632万	1304万	1354万
浙江省	宁波市	3877万	7234万	1145万	1523万
浙江省	舟山市	4342万	834万	1432万	1634万
四川省	成都市	1723万	2451万	2335万	4004万
四川省	绵阳市	1822万	2244万	245万	3077万
四川省	南充市	1943万	2333万	2457万	3551万
四川省	乐山市	2330万	2445万	2458万	352万"
`;

exports[`PivotSheet Export Test should export correct value field name by {formatHeader: false} 1`] = `
"	type	家具	家具	办公用品	办公用品
	sub_type	桌子	沙发	笔	纸张
province	city	number	number	number	number
浙江省	杭州市	7789	5343	945	1343
浙江省	绍兴市	2367	632	1304	1354
浙江省	宁波市	3877	7234	1145	1523
浙江省	舟山市	4342	834	1432	1634
四川省	成都市	1723	2451	2335	4004
四川省	绵阳市	1822	2244	245	3077
四川省	南充市	1943	2333	2457	3551
四川省	乐山市	2330	2445	2458	352"
`;

exports[`PivotSheet Export Test should export correct value field name by {formatHeader: true, formatData: true} 1`] = `
"	type	家具	家具	办公用品	办公用品
	sub_type	桌子	沙发	笔	纸张
province	city	数值	数值	数值	数值
浙江省	杭州市	7789万	5343万	945万	1343万
浙江省	绍兴市	2367万	632万	1304万	1354万
浙江省	宁波市	3877万	7234万	1145万	1523万
浙江省	舟山市	4342万	834万	1432万	1634万
四川省	成都市	1723万	2451万	2335万	4004万
四川省	绵阳市	1822万	2244万	245万	3077万
四川省	南充市	1943万	2333万	2457万	3551万
四川省	乐山市	2330万	2445万	2458万	352万"
`;

exports[`PivotSheet Export Test should export correct value field name by {formatHeader: true} 1`] = `
"	type	家具	家具	办公用品	办公用品
	sub_type	桌子	沙发	笔	纸张
province	city	数值	数值	数值	数值
浙江省	杭州市	7789	5343	945	1343
浙江省	绍兴市	2367	632	1304	1354
浙江省	宁波市	3877	7234	1145	1523
浙江省	舟山市	4342	834	1432	1634
四川省	成都市	1723	2451	2335	4004
四川省	绵阳市	1822	2244	245	3077
四川省	南充市	1943	2333	2457	3551
四川省	乐山市	2330	2445	2458	352"
`;

exports[`TableSheet Export Test should called with cell view meta when export formatted data 1`] = `
"province	city	type	sub_type	number
浙江省	杭州市	家具	桌子	-
浙江省	绍兴市	家具	桌子	-
浙江省	宁波市	家具	桌子	-
浙江省	舟山市	家具	桌子	-
浙江省	杭州市	家具	沙发	-
浙江省	绍兴市	家具	沙发	-
浙江省	宁波市	家具	沙发	-
浙江省	舟山市	家具	沙发	-
浙江省	杭州市	办公用品	笔	-
浙江省	绍兴市	办公用品	笔	-
浙江省	宁波市	办公用品	笔	-
浙江省	舟山市	办公用品	笔	-
浙江省	杭州市	办公用品	纸张	-
浙江省	绍兴市	办公用品	纸张	-
浙江省	宁波市	办公用品	纸张	-
浙江省	舟山市	办公用品	纸张	-
四川省	成都市	家具	桌子	-
四川省	绵阳市	家具	桌子	-
四川省	南充市	家具	桌子	-
四川省	乐山市	家具	桌子	-
四川省	成都市	家具	沙发	-
四川省	绵阳市	家具	沙发	-
四川省	南充市	家具	沙发	-
四川省	乐山市	家具	沙发	-
四川省	成都市	办公用品	笔	-
四川省	绵阳市	办公用品	笔	-
四川省	南充市	办公用品	笔	-
四川省	乐山市	办公用品	笔	-
四川省	成都市	办公用品	纸张	-
四川省	绵阳市	办公用品	纸张	-
四川省	南充市	办公用品	纸张	-
四川省	乐山市	办公用品	纸张	-
-	-	家具	桌子	-
-	-	家具	-	-
-	-	家具	沙发	-
-	-	办公用品	-	-
-	-	办公用品	笔	-
-	-	办公用品	纸张	-
浙江省	-	家具	桌子	-
浙江省	-	家具	沙发	-
浙江省	-	办公用品	笔	-
浙江省	-	办公用品	纸张	-
四川省	-	家具	桌子	-
四川省	-	家具	沙发	-
四川省	-	办公用品	笔	-
四川省	-	办公用品	纸张	-
浙江省	杭州市	家具	-	-
浙江省	杭州市	办公用品	-	-
浙江省	杭州市	-	-	-
浙江省	绍兴市	家具	-	-
浙江省	绍兴市	办公用品	-	-
浙江省	绍兴市	-	-	-
浙江省	宁波市	家具	-	-
浙江省	宁波市	办公用品	-	-
浙江省	宁波市	-	-	-
浙江省	舟山市	家具	-	-
浙江省	舟山市	办公用品	-	-
浙江省	舟山市	-	-	-
四川省	成都市	家具	-	-
四川省	成都市	办公用品	-	-
四川省	成都市	-	-	-
四川省	绵阳市	家具	-	-
四川省	绵阳市	办公用品	-	-
四川省	绵阳市	-	-	-
四川省	南充市	家具	-	-
四川省	南充市	办公用品	-	-
四川省	南充市	-	-	-
四川省	乐山市	家具	-	-
四川省	乐山市	办公用品	-	-
四川省	乐山市	-	-	-
浙江省	-	家具	-	-
浙江省	-	办公用品	-	-
浙江省	-	-	-	-
四川省	-	家具	-	-
四川省	-	办公用品	-	-
四川省	-	-	-	-
-	-	-	-	-"
`;

exports[`TableSheet Export Test should export correct HTML data 1`] = `"<meta charset=\\"utf-8\\"><table><tbody><tr><td>类别</td><td>子类别</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr></tbody></table>"`;

exports[`TableSheet Export Test should export correct all type data 1`] = `
Array [
  Object {
    "content": "类别	子类别
家具	桌子
家具	桌子
家具	桌子
家具	桌子
家具	沙发
家具	沙发
家具	沙发
家具	沙发
办公用品	笔
办公用品	笔
办公用品	笔
办公用品	笔
办公用品	纸张
办公用品	纸张
办公用品	纸张
办公用品	纸张
家具	桌子
家具	桌子
家具	桌子
家具	桌子
家具	沙发
家具	沙发
家具	沙发
家具	沙发
办公用品	笔
办公用品	笔
办公用品	笔
办公用品	笔
办公用品	纸张
办公用品	纸张
办公用品	纸张
办公用品	纸张",
    "type": "text/plain",
  },
  Object {
    "content": "<meta charset=\\"utf-8\\"><table><tbody><tr><td>类别</td><td>子类别</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>桌子</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>家具</td><td>沙发</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>笔</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr><tr><td>办公用品</td><td>纸张</td></tr></tbody></table>",
    "type": "text/html",
  },
]
`;

exports[`TableSheet Export Test should export correct data with no series number 1`] = `
"province	city	type	sub_type	number
浙江省	杭州市	家具	桌子	7789
浙江省	绍兴市	家具	桌子	2367
浙江省	宁波市	家具	桌子	3877
浙江省	舟山市	家具	桌子	4342
浙江省	杭州市	家具	沙发	5343
浙江省	绍兴市	家具	沙发	632
浙江省	宁波市	家具	沙发	7234
浙江省	舟山市	家具	沙发	834
浙江省	杭州市	办公用品	笔	945
浙江省	绍兴市	办公用品	笔	1304
浙江省	宁波市	办公用品	笔	1145
浙江省	舟山市	办公用品	笔	1432
浙江省	杭州市	办公用品	纸张	1343
浙江省	绍兴市	办公用品	纸张	1354
浙江省	宁波市	办公用品	纸张	1523
浙江省	舟山市	办公用品	纸张	1634
四川省	成都市	家具	桌子	1723
四川省	绵阳市	家具	桌子	1822
四川省	南充市	家具	桌子	1943
四川省	乐山市	家具	桌子	2330
四川省	成都市	家具	沙发	2451
四川省	绵阳市	家具	沙发	2244
四川省	南充市	家具	沙发	2333
四川省	乐山市	家具	沙发	2445
四川省	成都市	办公用品	笔	2335
四川省	绵阳市	办公用品	笔	245
四川省	南充市	办公用品	笔	2457
四川省	乐山市	办公用品	笔	2458
四川省	成都市	办公用品	纸张	4004
四川省	绵阳市	办公用品	纸张	3077
四川省	南充市	办公用品	纸张	3551
四川省	乐山市	办公用品	纸张	352
-	-	家具	桌子	26193
-	-	家具	-	49709
-	-	家具	沙发	23516
-	-	办公用品	-	29159
-	-	办公用品	笔	12321
-	-	办公用品	纸张	16838
浙江省	-	家具	桌子	18375
浙江省	-	家具	沙发	14043
浙江省	-	办公用品	笔	4826
浙江省	-	办公用品	纸张	5854
四川省	-	家具	桌子	7818
四川省	-	家具	沙发	9473
四川省	-	办公用品	笔	7495
四川省	-	办公用品	纸张	10984
浙江省	杭州市	家具	-	13132
浙江省	杭州市	办公用品	-	2288
浙江省	杭州市	-	-	15420
浙江省	绍兴市	家具	-	2999
浙江省	绍兴市	办公用品	-	2658
浙江省	绍兴市	-	-	5657
浙江省	宁波市	家具	-	11111
浙江省	宁波市	办公用品	-	2668
浙江省	宁波市	-	-	13779
浙江省	舟山市	家具	-	5176
浙江省	舟山市	办公用品	-	3066
浙江省	舟山市	-	-	8242
四川省	成都市	家具	-	4174
四川省	成都市	办公用品	-	6339
四川省	成都市	-	-	10513
四川省	绵阳市	家具	-	4066
四川省	绵阳市	办公用品	-	3322
四川省	绵阳市	-	-	7388
四川省	南充市	家具	-	4276
四川省	南充市	办公用品	-	6008
四川省	南充市	-	-	10284
四川省	乐山市	家具	-	4775
四川省	乐山市	办公用品	-	2810
四川省	乐山市	-	-	7585
浙江省	-	家具	-	32418
浙江省	-	办公用品	-	10680
浙江省	-	-	-	43098
四川省	-	家具	-	17291
四川省	-	办公用品	-	18479
四川省	-	-	-	35770
-	-	-	-	78868"
`;

exports[`TableSheet Export Test should export correct data with series number 1`] = `
"序号	province	city	产品类型	sub_type	number
1	浙江省	杭州市	家具-产品	桌子	7789
2	浙江省	绍兴市	家具-产品	桌子	2367
3	浙江省	宁波市	家具-产品	桌子	3877
4	浙江省	舟山市	家具-产品	桌子	4342
5	浙江省	杭州市	家具-产品	沙发	5343
6	浙江省	绍兴市	家具-产品	沙发	632
7	浙江省	宁波市	家具-产品	沙发	7234
8	浙江省	舟山市	家具-产品	沙发	834
9	浙江省	杭州市	办公用品-产品	笔	945
10	浙江省	绍兴市	办公用品-产品	笔	1304
11	浙江省	宁波市	办公用品-产品	笔	1145
12	浙江省	舟山市	办公用品-产品	笔	1432
13	浙江省	杭州市	办公用品-产品	纸张	1343
14	浙江省	绍兴市	办公用品-产品	纸张	1354
15	浙江省	宁波市	办公用品-产品	纸张	1523
16	浙江省	舟山市	办公用品-产品	纸张	1634
17	四川省	成都市	家具-产品	桌子	1723
18	四川省	绵阳市	家具-产品	桌子	1822
19	四川省	南充市	家具-产品	桌子	1943
20	四川省	乐山市	家具-产品	桌子	2330
21	四川省	成都市	家具-产品	沙发	2451
22	四川省	绵阳市	家具-产品	沙发	2244
23	四川省	南充市	家具-产品	沙发	2333
24	四川省	乐山市	家具-产品	沙发	2445
25	四川省	成都市	办公用品-产品	笔	2335
26	四川省	绵阳市	办公用品-产品	笔	245
27	四川省	南充市	办公用品-产品	笔	2457
28	四川省	乐山市	办公用品-产品	笔	2458
29	四川省	成都市	办公用品-产品	纸张	4004
30	四川省	绵阳市	办公用品-产品	纸张	3077
31	四川省	南充市	办公用品-产品	纸张	3551
32	四川省	乐山市	办公用品-产品	纸张	352
33	-	-	家具-产品	桌子	26193
34	-	-	家具-产品	-	49709
35	-	-	家具-产品	沙发	23516
36	-	-	办公用品-产品	-	29159
37	-	-	办公用品-产品	笔	12321
38	-	-	办公用品-产品	纸张	16838
39	浙江省	-	家具-产品	桌子	18375
40	浙江省	-	家具-产品	沙发	14043
41	浙江省	-	办公用品-产品	笔	4826
42	浙江省	-	办公用品-产品	纸张	5854
43	四川省	-	家具-产品	桌子	7818
44	四川省	-	家具-产品	沙发	9473
45	四川省	-	办公用品-产品	笔	7495
46	四川省	-	办公用品-产品	纸张	10984
47	浙江省	杭州市	家具-产品	-	13132
48	浙江省	杭州市	办公用品-产品	-	2288
49	浙江省	杭州市	-	-	15420
50	浙江省	绍兴市	家具-产品	-	2999
51	浙江省	绍兴市	办公用品-产品	-	2658
52	浙江省	绍兴市	-	-	5657
53	浙江省	宁波市	家具-产品	-	11111
54	浙江省	宁波市	办公用品-产品	-	2668
55	浙江省	宁波市	-	-	13779
56	浙江省	舟山市	家具-产品	-	5176
57	浙江省	舟山市	办公用品-产品	-	3066
58	浙江省	舟山市	-	-	8242
59	四川省	成都市	家具-产品	-	4174
60	四川省	成都市	办公用品-产品	-	6339
61	四川省	成都市	-	-	10513
62	四川省	绵阳市	家具-产品	-	4066
63	四川省	绵阳市	办公用品-产品	-	3322
64	四川省	绵阳市	-	-	7388
65	四川省	南充市	家具-产品	-	4276
66	四川省	南充市	办公用品-产品	-	6008
67	四川省	南充市	-	-	10284
68	四川省	乐山市	家具-产品	-	4775
69	四川省	乐山市	办公用品-产品	-	2810
70	四川省	乐山市	-	-	7585
71	浙江省	-	家具-产品	-	32418
72	浙江省	-	办公用品-产品	-	10680
73	浙江省	-	-	-	43098
74	四川省	-	家具-产品	-	17291
75	四川省	-	办公用品-产品	-	18479
76	四川省	-	-	-	35770
77	-	-	-	-	78868"
`;
